# test_poetry

./: pyproject.toml
src/project_test_poetry_init_test/: main.py
